--- a/cppAlgorithm.vcxproj.filters
+++ b/cppAlgorithm.vcxproj.filters
@@ -21,37 +21,37 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="cppAlgorithm.cpp">
+    <ClCompile Include="e_cppAlgorithm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="permutaion.cpp">
+    <ClCompile Include="e_permutaion.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="permutation2.cpp">
+    <ClCompile Include="e_permutation2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="10809.cpp">
+    <ClCompile Include="e_10809.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="10972다음순열.cpp">
+    <ClCompile Include="1_10972다음순열.cpp">
       <Filter>Source Files\section1</Filter>
     </ClCompile>
-    <ClCompile Include="2309일곱난쟁이.cpp">
+    <ClCompile Include="1_2309일곱난쟁이.cpp">
       <Filter>Source Files\section1</Filter>
     </ClCompile>
-    <ClCompile Include="9996한국에접속.cpp">
+    <ClCompile Include="1_9996한국에접속.cpp">
       <Filter>Source Files\section1</Filter>
     </ClCompile>
-    <ClCompile Include="2559수열.cpp">
+    <ClCompile Include="1_2559수열.cpp">
       <Filter>Source Files\section1</Filter>
     </ClCompile>
-    <ClCompile Include="1259팰린드롬수.cpp">
+    <ClCompile Include="1_1259팰린드롬수.cpp">
       <Filter>Source Files\section1</Filter>
     </ClCompile>
-    <ClCompile Include="findway.cpp">
+    <ClCompile Include="2_findway.cpp">
       <Filter>Source Files\section2</Filter>
     </ClCompile>
-    <ClCompile Include="2178미로탐색.cpp">
+    <ClCompile Include="2_2178미로탐색.cpp">
       <Filter>Source Files\section2</Filter>
     </ClCompile>
   </ItemGroup>
