--- a/cppAlgorithm.vcxproj.filters
+++ b/cppAlgorithm.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Source Files\section2">
       <UniqueIdentifier>{72b1d97d-7de7-4274-b1a1-d149ea08294b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\section3">
+      <UniqueIdentifier>{c276f8fa-242c-4bb7-89ce-771e19460201}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="e_cppAlgorithm.cpp">
@@ -62,6 +65,9 @@
     </ClCompile>
     <ClCompile Include="2n_9012괄호.cpp">
       <Filter>Source Files\section2</Filter>
+    </ClCompile>
+    <ClCompile Include="3_a_15686치킨배달.cpp">
+      <Filter>Source Files\section3</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
