--- a/cppAlgorithm.vcxproj.filters
+++ b/cppAlgorithm.vcxproj.filters
@@ -111,5 +111,8 @@
     <ClCompile Include="4_16_3015오아시스재결합.cpp">
       <Filter>Source Files\section4</Filter>
     </ClCompile>
+    <ClCompile Include="3_5_12869뮤탈리스크.cpp">
+      <Filter>Source Files\section3</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
