--- a/cppAlgorithm.vcxproj.filters
+++ b/cppAlgorithm.vcxproj.filters
@@ -114,5 +114,11 @@
     <ClCompile Include="3_5_12869뮤탈리스크.cpp">
       <Filter>Source Files\section3</Filter>
     </ClCompile>
+    <ClCompile Include="1_2_10808알파벳개수.cpp">
+      <Filter>Source Files\section1</Filter>
+    </ClCompile>
+    <ClCompile Include="2_2_1012유기농배추.cpp">
+      <Filter>Source Files\section2</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
