--- a/cppAlgorithm.vcxproj
+++ b/cppAlgorithm.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="3_2_2589보물섬.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="3_4_4179불!.cpp" />
     <ClCompile Include="3_5_12869뮤탈리스크.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
