--- a/cppAlgorithm.vcxproj.filters
+++ b/cppAlgorithm.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="3_2_2589보물섬.cpp">
       <Filter>Source Files\section3</Filter>
     </ClCompile>
+    <ClCompile Include="3_4_4179불!.cpp">
+      <Filter>Source Files\section3</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="3_0._완전탐색txt">
