--- a/cppAlgorithm.vcxproj.filters
+++ b/cppAlgorithm.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="3_4_4179불!.cpp">
       <Filter>Source Files\section3</Filter>
     </ClCompile>
+    <ClCompile Include="4_2_1285동전뒤집기.cpp">
+      <Filter>Source Files\section4</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="3_0._완전탐색txt">
