--- a/cppAlgorithm.vcxproj.filters
+++ b/cppAlgorithm.vcxproj.filters
@@ -129,6 +129,12 @@
     <ClCompile Include="4_2_1285동전뒤집기.cpp">
       <Filter>Source Files\section4</Filter>
     </ClCompile>
+    <ClCompile Include="4_4_1987알파벳.cpp">
+      <Filter>Source Files\section4</Filter>
+    </ClCompile>
+    <ClCompile Include="4_5_14980경사로.cpp">
+      <Filter>Source Files\section4</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="3_0._완전탐색txt">
