--- a/cppAlgorithm.vcxproj
+++ b/cppAlgorithm.vcxproj
@@ -157,7 +157,13 @@
     <ClCompile Include="4_16_3015오아시스재결합.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="4_2_1285동전뒤집기.cpp" />
+    <ClCompile Include="4_2_1285동전뒤집기.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="4_4_1987알파벳.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="4_5_14980경사로.cpp" />
     <ClCompile Include="4_a_19942다이어트.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
